--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,16 @@ apply plugin: 'forge'
 
 version = "1.7.10-1.3"
 group= "com.mcbeyondreality.beyondrealitycore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+archivesBaseName = "beyondrealitycore"
+
+jar {
+    manifest {
+        attributes("FMLCorePluginContainsFMLMod": "true", "FMLCorePlugin": "com.mcbeyondreality.beyondrealitycore.transformer.BRLoadingPlugin")
+    }
+}
 
 minecraft {
-    version = "1.7.10-10.13.0.1169"
+    version = "1.7.10-10.13.0.1208"
     assetDir = "eclipse/assets"
 }
 
