--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,3 @@
 minecraft_version = 1.7.10
-forge_version = 10.13.0.1208
-mod_version = 1.5.4
+forge_version = 10.13.2.1236
+mod_version = 1.5.5-BETA
