--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import static jdk.nashorn.internal.objects.NativeRegExp.compile
+
 buildscript {
     repositories {
         mavenCentral()
@@ -9,10 +11,16 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+
+        maven {
+            name = "IGW"
+            url = "http://maven.k-4u.nl/"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
+
 }
 
 apply plugin: 'forge'
@@ -28,6 +36,10 @@ configFile.withReader {
 version = "${config.minecraft_version}-${config.mod_version}"
 group= "com.mcbeyondreality.beyondrealitycore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "beyondrealitycore"
+
+    dependencies {
+        compile "igwmod:IGW-Mod-1.7.10-1.1.9-29-userdev.jar "
+    }
 
 minecraft {
     version = config.minecraft_version + "-" + config.forge_version
