--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ if (project.hasProperty("teamcity")) {
 if (build == null || build == ""){
     version = "${config.minecraft_version}-${config.mod_version}"
 }else{
-    version = "${config.minecraft_version}-${config.mod_version}-"+ build.substring(0,7)
+    version = "${config.minecraft_version}-${config.mod_version}-"+ build
 }
 
 
