--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import static jdk.nashorn.internal.objects.NativeRegExp.compile
-
 buildscript {
     repositories {
         mavenCentral()
@@ -13,26 +11,14 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 
-repositories {
-    ivy {
-        name "BuildCraft"
-        artifactPattern "http://www.mod-buildcraft.com/releases/BuildCraft/[revision]/[module]-[revision](-[classifier]).[ext]"
-    }
-}
+
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-ext.configFile = file "build.properties"
-
-configFile.withReader {
-    def prop = new Properties()
-    prop.load(it)
-    project.ext.config = new ConfigSlurper().parse prop
-}
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
@@ -45,9 +31,9 @@ if (project.hasProperty("teamcity")) {
 }
 
 if (build == null || build == ""){
-    version = "${config.minecraft_version}-${config.mod_version}"
+    version = "${project.minecraft_version}-${project.mod_version}"
 }else{
-    version = "${config.minecraft_version}-${config.mod_version}-"+ build
+    version = "${project.minecraft_version}-${project.mod_version}-"+ build
 }
 
 
@@ -55,18 +41,14 @@ group= "com.mcbeyondreality.beyondrealitycore" // http://maven.apache.org/guides
 archivesBaseName = "beyondrealitycore"
 
 minecraft {
-    version = config.minecraft_version + "-" + config.forge_version
+    version = project.minecraft_version + "-" + project.forge_version
 
     replaceIn "BeyondRealityCore.java"
-    replace "@VERSION@", "${config.mod_version}"
+    replace "@VERSION@", "${project.mod_version}"
 	
     runDir = "eclipse"
 
-    mappings = "snapshot_20161220"
-}
-
-dependencies{
-    deobfCompile name: "buildcraft", version: "7.99.3"
+    mappings = "snapshot_20170624"
 }
 
 processResources
